Component Site File Structure

--- a/com_europeana/com_europeana_v2 - Copy/administrator/language/en-GB/en-GB.com_europeana.ini
+++ b/com_europeana/com_europeana_v2 - Copy/administrator/language/en-GB/en-GB.com_europeana.ini
@@ -8,5 +8,15 @@ COM_EUROPEANA_EUROPEANA_NAME="Name"
 COM_EUROPEANA_EUROPEANA_USERNAME="Username"
 COM_EUROPEANA_EUROPEANA_FILENAME="File name"
 COM_EUROPEANA_EUROPEANA_DATETIME="Date"
+COM_EUROPEANA_EUROPEANA_LOGS="Items exported"
 COM_EUROPEANA_NO_RECORDS_FOUND_TO_EXPORT="No records found to export"
 COM_EUROPEANA_DOWNLOAD="Download"
+COM_EUROPEANA_RECORD_X_WAS_DELETED="Record %s was Successfuly deleted."
+COM_EUROPEANA_RECORDS_X_WAS_DELETED="Record(s) %s was Successfuly deleted."
+COM_EUROPEANA_SUCCESSFULY_DELETED="Record(s) successfuly deleted"
+COM_EUROPEANA_RECORD_X_WAS_RESTORED="Record %s was Successfuly restored."
+COM_EUROPEANA_RECORDS_X_WAS_RESTORED="Record(s) %s was Successfuly restored."
+COM_EUROPEANA_SUCCESSFULY_RESTORED="Record(s) successfuly restored"
+COM_EUROPEANA_ERROR="Error occured"
+COM_EUROPEANA_RESTORE="Restore"
+COM_EUROPEANA_IDS_EXPORTED="Id(s) exported: "
