--- a/com_europeana/com_europeana_v2 - Copy/language/en-GB/en-GB.com_europeana.ini
+++ b/com_europeana/com_europeana_v2 - Copy/language/en-GB/en-GB.com_europeana.ini
@@ -1,2 +1,17 @@
 COM_EUROPEANA="Europeana"
-COM_EUROPEANA_WELCOME="Europeana frontend"
+COM_EUROPEANA_WELCOME="Europeana backend"
+COM_EUROPEANA_DESCRIPTION="Descrição do componente"
+COM_EUROPEANA_TASK_EXPORT="Export"
+COM_EUROPEANA_FILE_WRITE_SUCCESS="File write successful"
+COM_EUROPEANA_EUROPEANA_FILE_ID="Id"
+COM_EUROPEANA_EUROPEANA_NAME="Name"
+COM_EUROPEANA_EUROPEANA_USERNAME="Username"
+COM_EUROPEANA_EUROPEANA_FILENAME="File name"
+COM_EUROPEANA_EUROPEANA_DATETIME="Date"
+COM_EUROPEANA_NO_RECORDS_FOUND_TO_EXPORT="No records found to export"
+COM_EUROPEANA_DOWNLOAD="Download"
+COM_EUROPEANA_RECORD_X_WAS_DELETED="Record %s was Successfuly deleted."
+COM_EUROPEANA_RECORDS_X_WAS_DELETED="Record(s) %s was Successfuly deleted."
+COM_EUROPEANA_SUCCESSFULY_DELETED="Record(s) successfuly deleted"
+COM_EUROPEANA_ERROR="Error occured"
+COM_EUROPEANA_RESTORE="Restore"
