Component Site File Structure

--- a/com_europeana/com_europeana_v2 - Copy/administrator/language/en-GB/en-GB.com_europeana.ini
+++ b/com_europeana/com_europeana_v2 - Copy/administrator/language/en-GB/en-GB.com_europeana.ini
@@ -3,6 +3,7 @@ COM_EUROPEANA_WELCOME="Europeana backend"
 COM_EUROPEANA_DESCRIPTION="Descrição do componente"
 COM_EUROPEANA_TASK_EXPORT="Export"
 COM_EUROPEANA_FILE_WRITE_SUCCESS="File write successful"
+COM_EUROPEANA_EUROPEANA="Europeana"
 COM_EUROPEANA_EUROPEANA_FILE_ID="Id"
 COM_EUROPEANA_EUROPEANA_NAME="Name"
 COM_EUROPEANA_EUROPEANA_USERNAME="Username"
@@ -17,6 +18,10 @@ COM_EUROPEANA_SUCCESSFULY_DELETED="Record(s) successfuly deleted"
 COM_EUROPEANA_RECORD_X_WAS_RESTORED="Record %s was Successfuly restored."
 COM_EUROPEANA_RECORDS_X_WAS_RESTORED="Record(s) %s was Successfuly restored."
 COM_EUROPEANA_SUCCESSFULY_RESTORED="Record(s) successfuly restored"
+COM_EUROPEANA_RECORD_X_WAS_TRASHED="Record %s was Successfuly trashed."
+COM_EUROPEANA_RECORDS_X_WAS_TRASHED="Record(s) %s was Successfuly trashed."
+COM_EUROPEANA_SUCCESSFULY_TRASHED="Record(s) successfuly trashed"
 COM_EUROPEANA_ERROR="Error occured"
 COM_EUROPEANA_RESTORE="Restore"
 COM_EUROPEANA_IDS_EXPORTED="Id(s) exported: "
+COM_EUROPEANA_CONFIGURATION="Europeana's component configurations"
